--- a/IMDB/public/css/main.css
+++ b/IMDB/public/css/main.css
@@ -34,6 +34,13 @@ button {
 	cursor: pointer;
 }
 
+.container {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 960px;
+	position: relative;
+}
+
 /* 			HEADER			 */
 
 header.header {
@@ -41,10 +48,11 @@ header.header {
 	background-image: url(../img/capa-madmax2.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center center;
 
 	height: 90vh;
 	width: 100%;
-	
+
 	padding: 20px;
 
 	display: flex;
@@ -52,12 +60,10 @@ header.header {
 	justify-content: space-between;
 
 	position: relative;
-
 }
 
 .header::after {
 	content: '';
-
 	height: 100%;
 	width: 100%;
 
@@ -68,28 +74,22 @@ header.header {
 	left: 0;
 }
 
-.container {
-	margin: 0 auto;
-	width: 960px;
-	position: relative;
-}
-
 div.nav-container {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: space-between;
+	z-index: 2;
+	height: 90px;
 }
 
 div.nav-container ul.header-links {
+	margin: 0;
 	display: flex;
 	align-items: center;
-
-	z-index: 2;
-}
-
-div.nav-container ul.header-links li {
-	margin: 0 25px;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
 }
 
 a.link {
@@ -122,9 +122,12 @@ div.nav-container div.header-user span {
 	margin-left: 15px;
 }
 
+/* 			HEADER CONTENT			 */
+
 div.header-content .container {
 	position: relative;
 	z-index: 2;
+	text-align: center;
 }
 
 div.header-content h1.title {
@@ -132,16 +135,17 @@ div.header-content h1.title {
 
 	margin: 0;
 
-	font-size: 6.5em;
+	font-size: 4em;
 	line-height: 1.2em;
 	text-transform: uppercase;
 }
 
 div.header-content .container .header-genre {
 	display: flex;
-	
-	margin: 15px 0 30px;
+	align-items: center;
+	justify-content: center;
 
+	margin: 15px 0 30px;
 	font-size: 1.3em;
 }
 
@@ -156,16 +160,20 @@ div.header-content .container .header-genre a {
 
 div.header-content .container button.trailer {
 	padding: 15px 50px;
-
+	
 	background: #e4bb23;
-
+	
 	font-size: 1.5em;
 	border: 0;
 	border-radius: 25px;
-
+	
 	position: relative;
 }
-
+	
+div.header-content .container button.trailer:hover {
+	background: #bc9a1d;
+}
+				
 div.header-content .container button.trailer i {
 	font-size: 1.5em;
 
@@ -191,29 +199,33 @@ main {
 	background-color: #f2f2f2;
 }
 
-/* 			MAIN FIGURE			 */
+/* 			MAIN NAV			 */
+main .catalog-nav {
+	height: 100%;
+	
+}
 
 main .catalog-nav ul {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-
-	margin: 0 auto;
-	padding: 0 20px;
-	
-	height: 67px;
 	
 	border-bottom: 1px solid rgba(0, 0, 0, 0.08);
 }
 
-main .catalog-nav ul li {
-	margin: 0 20px;
+main .catalog-nav ul li + li {
+	margin-top: 15px;
+}
+
+main .catalog-nav ul li:last-child {
+	margin-bottom: 15px;
 }
 
 main .catalog-nav li a {
 	color: #e4bb23;
 
-	font-size: 1.3em;
+	font-size: 2em;
 	font-weight: bold;
 	text-transform: uppercase;
 
@@ -222,19 +234,16 @@ main .catalog-nav li a {
 	transition: all 0.2s ease-in-out;
 }
 
-main .catalog-nav li a:hover {
-	box-shadow: inset 0 -1px 0 #e4bb23;
-}
-
 main section {
 	margin: 10px 0;
 	padding: 20px 0;
 }
 
+/* 			MAIN CATALOG			 */
+
 main .film-catalog {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 10px;
+	grid-template-columns: 1fr;
 }
 
 main .film-catalog li {
@@ -249,15 +258,15 @@ main .film-catalog li {
 
 main .film-catalog li figure {
 	margin: 0;
-  width: 100%;
-  height: auto;
-  overflow: hidden;
-  position: relative;
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+	position: relative;
 }
 
 main .film-catalog li figure img {
 	width: 100%;
-  height: auto;
+	height: auto;
 }
 
 main .film-catalog li figure div.film-hover {
@@ -287,12 +296,13 @@ main .film-catalog li figure div.film-hover h2 {
 	font-size: 2em;
 	line-height: 1em;
 	text-transform: uppercase; 
+	text-align: center;
 }
 
 main .film-catalog li figure div.film-hover a {
 	color: #fff;
 	font-size: 5em;
-  transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 }
 
 main .film-catalog li figure div.film-hover a:hover {
@@ -305,7 +315,7 @@ main .film-catalog li:hover .film-hover {
 }
 
 /* 			MAIN SUMMARY			 */
-
+	
 main section div.film-summary {
 	padding: 10px;
 	width: 100%;
@@ -352,19 +362,23 @@ main section .film-summary div span {
 }
 
 /* 			FOOTER			 */
-
+	
 footer {
-	padding: 20px 0;
+	padding-bottom: 10px;
 }
 
 footer div.container {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
 }
 
 footer ul.footer-list {
 	display: flex;
+	justify-content: space-evenly;
+	width: 100%;
+	margin: 40px 0 5px;
 }
 
 footer ul.footer-list li {
@@ -388,4 +402,99 @@ footer ul.footer-list li:nth-child(2):hover a {
 }
 footer ul.footer-list li:nth-child(3):hover a {
 	color: #e95950;
+}
+
+@media (min-width: 768px) {
+
+	/* 			HEADER NAV			 */
+	
+	div.nav-container {
+		flex-direction: row;
+		align-items: center;
+		height: 100%;
+	}
+	
+	div.nav-container ul.header-links {
+		flex-direction: row;
+	}
+	
+	div.nav-container ul.header-links li {
+		margin: 0 25px;
+	}
+
+	/* 			HEADER CONTENT			 */
+
+	div.header-content .container {
+		text-align: start;
+	}
+
+	div.header-content h1.title {
+		font-size: 6.5em;
+	}
+
+	div.header-content .container .header-genre {
+		display: flex;
+		justify-content: flex-start;
+
+		margin: 15px 0 30px;
+		font-size: 1.3em;
+	}
+	
+	/* 			MAIN NAV			 */
+	
+	main .catalog-nav ul {
+		flex-direction: row;
+
+		margin: 0 auto;
+		padding: 20px;
+		height: 67px;
+	}
+	
+	main .catalog-nav ul li {
+		margin: 0 20px !important;
+	}
+	
+	main .catalog-nav li a {
+		font-size: 1.3em;
+	}
+	
+	main .catalog-nav li a:hover {
+		box-shadow: inset 0 -1px 0 #e4bb23;
+	}
+
+	/* 			MAIN CATALOG			 */
+	
+	main .film-catalog {
+		grid-template-columns: repeat(4, 1fr);
+		grid-gap: 10px;
+	}
+	
+	/* 			FOOTER			 */
+	
+	footer {
+		padding: 20px 0;
+	}
+	
+	footer div.container {
+		flex-direction: row;
+	}
+	
+	footer ul.footer-list {
+		justify-content: center;
+		margin: 0;
+		width: auto;
+	}
+	
+	footer ul.footer-list li {
+		margin: 0 20px;
+	}
+	
+	footer ul.footer-list li:last-child {
+		margin-right: 0;
+	}
+	
+	footer ul.footer-list li a {
+		color: #bababa;
+		font-size: 2.5em;
+	}
 }
